--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,71 @@ footer .content .moreList{
     display: none;
 }
 
+.queryBox .queryTitle{
+    position: relative;
+    box-sizing: border-box;
+    width: 37.5rem;
+    height: 4rem;
+    background-color: #ececee;
+}
+.queryBox .queryTitle span{
+    position: absolute;
+    display: block;
+    left: 1.5rem;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 0.3rem;
+    height: 1.7rem;
+    background-color: #1998fb;
+}
+.queryBox .queryTitle p{
+    padding-left: 2.5rem;
+    line-height: 4rem;
+    font-size: 1.5rem;
+    color: #333333;
+}
+.queryBox{
+    position: fixed;
+    display: none;
+    bottom: 0;
+    box-sizing: border-box;
+    padding-bottom: 2.2rem;
+    width: 37.5rem;
+    background-color: #ffffff;
+    z-index: 999;
+}
+.queryBox ul{
+    box-sizing: border-box;
+    width: 37.5rem;
+    padding: 0.5rem 1.5rem 2.3rem;
+}
+.queryBox ul li{
+    box-sizing: border-box;
+    width: 34.5rem;
+    height: 3.5rem;
+    font-size: 1.4rem;
+    color: #333333;
+    line-height: 3.5rem;
+    border-bottom: 1px solid #e5e5e5;
+}
+.queryBox .queryBtn{
+    margin: 0 auto;
+    width: 12.9rem;
+    height: 3.8rem;
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 3.8rem;
+    color: #ffffff;
+    background-color: #0086cf;
+}
+.mask{
+    position: absolute;
+    top: 0px;
+    filter: alpha(opacity=30);
+    background-color: #000;
+    z-index: 100;
+    left: 0px;
+    opacity: 0.3;
+    -moz-opacity: 0.3;
+}
