--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@ section .content{
 }
 section .content ul{
     box-sizing: border-box;
-    padding: 1rem 2.3rem 0 1rem;
+    padding: 1rem 2.3rem 1rem 1rem;
     width: 37.5rem;
-    height: 11.7rem;
     background-color: #ffffff;
 }
 section .content ul li{
