--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,9 @@ section .content ul li:nth-child(2) span{
 section .content ul li:nth-child(3) span{
     background-color: #77af38;
 }
+section .content ul li:nth-child(4) span{
+    background-color: #f68940;
+}
 section .content ul li:nth-child(3) p i{
     color: #0086cf;
 }
