--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ section .content ul li{
     width: 36.5rem;
     height: 2rem;
 }
-section .content ul li:nth-child(2){
-    height: 2rem;
+section .content ul li:nth-child(1) p{
+    color: #232323;
 }
 section .content ul li span{
     position: absolute;
@@ -36,16 +36,16 @@ section .content ul li span{
     display: block;
     width: 0.2rem;
     height: 1rem;
-    background-color: #0086cf;
-}
-section .content ul li:nth-child(2) span{
     background-color: #ffb54b;
 }
+section .content ul li:nth-child(2) span{
+    background-color: #ffffff;
+}
 section .content ul li:nth-child(3) span{
-    background-color: #77af38;
+    background-color: #ffffff;
 }
 section .content ul li:nth-child(4) span{
-    background-color: #f68940;
+    background-color: #ffffff;
 }
 section .content ul li:nth-child(3) p i{
     color: #0086cf;
@@ -78,7 +78,7 @@ section .wraning{
 section .write{
     position: relative;
     box-sizing: border-box;
-    margin-bottom: 0.05rem;
+    margin-bottom: 1px;
     padding-left: 1rem;
     width: 37.5rem;
     height: 3.8rem;
@@ -111,7 +111,7 @@ section .write span{
 section .first.write span{
     width: 8.3rem;
     height: 2.6rem;
-    border: 0.1rem solid #0086cf;
+    border: 2px solid #0086cf;
     text-align: center;
     font-size: 1.2rem;
     line-height: 2.6rem;
@@ -161,21 +161,31 @@ footer{
     background-color: #ffffff;
 }
 footer .title{
-    margin-bottom: 1.3rem;
-    font-size: 1.2rem;
+    position: relative;
+    margin: 0 auto 1.3rem;
+    width: 19.5rem;
+    font-size: 1.4rem;
     color: #333333;
     text-align: center;
 }
 footer .title span:nth-child(2){
     margin: 0 1.4rem;
 }
+footer .title span:first-child{
+    left: 0;
+}
 footer .title span:first-child,footer .title span:last-child{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 0;
     display: inline-block;
     width: 5.5rem;
-    border-bottom: 0.05rem solid #333333;
+    border-bottom: 1px solid #333333;
 }
 footer .content{
-    padding-bottom: 2rem;
+    padding-bottom: 2.5rem;
 }
 footer .content ul{
     padding: 0 2.75rem;
